2.1.5
- Hungarian translation was added (thanks to Sándor Csaba)

2.1.4
- P4A_Field::setType('color') was added with nice color picker plugin (fabrtastic) from jQuery
- a bug with file upload error trapping was solved
- FCKEditor was updated to 2.4.3
- jQuery was updated to 1.1.3.1
- jqModal was updated to 2007.07.30 +r10
- P4A_DB_Navigator drag&drop functionalities were implemented thru jQuery

2.1.3
- a javascript error in p4a.js was fixed
- better error messages were introduced on query errors
- ADODB was updated to 495a
- loading won't fade in/out anymore
- popups now have a 20px default padding

2.1.2
- P4A_Field with file upload now supports ajax calls to upload/delete the file
- a nicer style for tooltips was added
- a nicer style for popups was added
- ajax calls now block the UI to avoid concurrency troubles
- various error checks were added and ajax error are trapped the right way
- PEAR::File was dropper
- PEAR::File_SWF was dropped, operations on flash files are handled by getid3
- the popups close button now it's a P4A_Button (P4A_Mask::popup_close_button) thus you can intercept on it
- popup flickering was removed
- minor internal changes were done

2.1.1
- PEAR::Validate inclusion was moved to P4A_Validate file
- ADODB was updated to 495
- scriptaculous was dropped
- jquery was added
- some XHTML validation bugs were fixed
- PEAR::File 1.3.0RC1 was re-added to P4A PEAR repository
- PEAR::File_SWF was re-added to P4A PEAR repository
- getID3 1.7.7 library was added
- jQuery jqModal/dimensions/jmedia plugin were added to manage the popup and block the background controls
- P4A_File::getasFile() method now supports previewing of audio and video files thanks to jmedia
- P4A_Field::setTooltip(), P4A_Field::getTooltip(), P4A_Label::setTooltip(), P4A_Label::getTooltip() methods were added
- tooltip were implemented using the jqModal jQuery plugin
- an info icon (16x16) was added, used for tooltips
- popup template is now simpler and has a close icon