@@ -122,7 +122,7 @@
 			$tooltip_text = $this->_tooltip;
 			$tooltip_handler = '';
 			if ($tooltip_text) {
-				$tooltip_text = "<div id='{$id}_tt' class='p4a_tooltip_text'>{$tooltip_text}</div>";
+				$tooltip_text = "<div id='{$id}_tt' class='hidden'>{$tooltip_text}</div>";
 				$tooltip_handler = "<img class='p4a_tooltip_handler' src='" . P4A_ICONS_PATH . "/16/info.png' alt='' /> ";
 				$header .= " onmouseover='showTooltip(this, \"{$id}_tt\")' ";
 			}
