@@ -1,320 +1,10 @@
-/*
+/* Copyright (c) 2007 Paul Bakaus (paul.bakaus@googlemail.com) and Brandon Aaron (brandon.aaron@gmail.com || http://brandonaaron.net)
  * Dual licensed under the MIT (http://www.opensource.org/licenses/mit-license.php)
  * and GPL (http://www.opensource.org/licenses/gpl-license.php) licenses.
  *
- * $LastChangedDate: 2007-03-27 16:29:43 -0500 (Tue, 27 Mar 2007) $
- * $Rev: 1601 $
+ * $LastChangedDate: 2007-07-25 22:06:52 -0500 (Wed, 25 Jul 2007) $
+ * $Rev: 2490 $
+ *
+ * Version: 1.0.1
  */
-
-jQuery.fn._height = jQuery.fn.height;
-jQuery.fn._width  = jQuery.fn.width;
-
-/**
- * If used on document, returns the document's height (innerHeight)
- * If used on window, returns the viewport's (window) height
- * See core docs on height() to see what happens when used on an element.
- *
- * @example $("#testdiv").height()
- * @result 200
- *
- * @example $(document).height()
- * @result 800
- *
- * @example $(window).height()
- * @result 400
- *
- * @name height
- * @type Object
- * @cat Plugins/Dimensions
- */
-jQuery.fn.height = function() {
-	if ( this[0] == window )
-		return self.innerHeight ||
-			jQuery.boxModel && document.documentElement.clientHeight ||
-			document.body.clientHeight;
-
-	if ( this[0] == document )
-		return Math.max( document.body.scrollHeight, document.body.offsetHeight );
-
-	return this._height(arguments[0]);
-};
-
-/**
- * If used on document, returns the document's width (innerWidth)
- * If used on window, returns the viewport's (window) width
- * See core docs on height() to see what happens when used on an element.
- *
- * @example $("#testdiv").width()
- * @result 200
- *
- * @example $(document).width()
- * @result 800
- *
- * @example $(window).width()
- * @result 400
- *
- * @name width
- * @type Object
- * @cat Plugins/Dimensions
- */
-jQuery.fn.width = function() {
-	if ( this[0] == window )
-		return self.innerWidth ||
-			jQuery.boxModel && document.documentElement.clientWidth ||
-			document.body.clientWidth;
-
-	if ( this[0] == document )
-		return Math.max( document.body.scrollWidth, document.body.offsetWidth );
-
-	return this._width(arguments[0]);
-};
-
-/**
- * Returns the inner height value (without border) for the first matched element.
- * If used on document, returns the document's height (innerHeight)
- * If used on window, returns the viewport's (window) height
- *
- * @example $("#testdiv").innerHeight()
- * @result 800
- *
- * @name innerHeight
- * @type Number
- * @cat Plugins/Dimensions
- */
-jQuery.fn.innerHeight = function() {
-	return this[0] == window || this[0] == document ?
-		this.height() :
-		this.css('display') != 'none' ?
-		 	this[0].offsetHeight - (parseInt(this.css("borderTopWidth")) || 0) - (parseInt(this.css("borderBottomWidth")) || 0) :
-			this.height() + (parseInt(this.css("paddingTop")) || 0) + (parseInt(this.css("paddingBottom")) || 0);
-};
-
-/**
- * Returns the inner width value (without border) for the first matched element.
- * If used on document, returns the document's Width (innerWidth)
- * If used on window, returns the viewport's (window) width
- *
- * @example $("#testdiv").innerWidth()
- * @result 1000
- *
- * @name innerWidth
- * @type Number
- * @cat Plugins/Dimensions
- */
-jQuery.fn.innerWidth = function() {
-	return this[0] == window || this[0] == document ?
-		this.width() :
-		this.css('display') != 'none' ?
-			this[0].offsetWidth - (parseInt(this.css("borderLeftWidth")) || 0) - (parseInt(this.css("borderRightWidth")) || 0) :
-			this.height() + (parseInt(this.css("paddingLeft")) || 0) + (parseInt(this.css("paddingRight")) || 0);
-};
-
-/**
- * Returns the outer height value (including border) for the first matched element.
- * Cannot be used on document or window.
- *
- * @example $("#testdiv").outerHeight()
- * @result 1000
- *
- * @name outerHeight
- * @type Number
- * @cat Plugins/Dimensions
- */
-jQuery.fn.outerHeight = function() {
-	return this[0] == window || this[0] == document ?
-		this.height() :
-		this.css('display') != 'none' ?
-			this[0].offsetHeight :
-			this.height() + (parseInt(this.css("borderTopWidth")) || 0) + (parseInt(this.css("borderBottomWidth")) || 0)
-				+ (parseInt(this.css("paddingTop")) || 0) + (parseInt(this.css("paddingBottom")) || 0);
-};
-
-/**
- * Returns the outer width value (including border) for the first matched element.
- * Cannot be used on document or window.
- *
- * @example $("#testdiv").outerWidth()
- * @result 1000
- *
- * @name outerWidth
- * @type Number
- * @cat Plugins/Dimensions
- */
-jQuery.fn.outerWidth = function() {
-	return this[0] == window || this[0] == document ?
-		this.width() :
-		this.css('display') != 'none' ?
-			this[0].offsetWidth :
-			this.height() + (parseInt(this.css("borderLeftWidth")) || 0) + (parseInt(this.css("borderRightWidth")) || 0)
-				+ (parseInt(this.css("paddingLeft")) || 0) + (parseInt(this.css("paddingRight")) || 0);
-};
-
-/**
- * Returns how many pixels the user has scrolled to the right (scrollLeft).
- * Works on containers with overflow: auto and window/document.
- *
- * @example $("#testdiv").scrollLeft()
- * @result 100
- *
- * @name scrollLeft
- * @type Number
- * @cat Plugins/Dimensions
- */
-jQuery.fn.scrollLeft = function() {
-	if ( this[0] == window || this[0] == document )
-		return self.pageXOffset ||
-			jQuery.boxModel && document.documentElement.scrollLeft ||
-			document.body.scrollLeft;
-
-	return this[0].scrollLeft;
-};
-
-/**
- * Returns how many pixels the user has scrolled to the bottom (scrollTop).
- * Works on containers with overflow: auto and window/document.
- *
- * @example $("#testdiv").scrollTop()
- * @result 100
- *
- * @name scrollTop
- * @type Number
- * @cat Plugins/Dimensions
- */
-jQuery.fn.scrollTop = function() {
-	if ( this[0] == window || this[0] == document )
-		return self.pageYOffset ||
-			jQuery.boxModel && document.documentElement.scrollTop ||
-			document.body.scrollTop;
-
-	return this[0].scrollTop;
-};
-
-/**
- * Returns the location of the element in pixels from the top left corner of the viewport.
- *
- * For accurate readings make sure to use pixel values for margins, borders and padding.
- *
- * @example $("#testdiv").offset()
- * @result { top: 100, left: 100, scrollTop: 10, scrollLeft: 10 }
- *
- * @example $("#testdiv").offset({ scroll: false })
- * @result { top: 90, left: 90 }
- *
- * @example var offset = {}
- * $("#testdiv").offset({ scroll: false }, offset)
- * @result offset = { top: 90, left: 90 }
- *
- * @name offset
- * @param Object options A hash of options describing what should be included in the final calculations of the offset.
- *                       The options include:
- *                           margin: Should the margin of the element be included in the calculations? True by default.
- *                                   If set to false the margin of the element is subtracted from the total offset.
- *                           border: Should the border of the element be included in the calculations? True by default.
- *                                   If set to false the border of the element is subtracted from the total offset.
- *                           padding: Should the padding of the element be included in the calculations? False by default.
- *                                    If set to true the padding of the element is added to the total offset.
- *                           scroll: Should the scroll offsets of the parent elements be included in the calculations?
- *                                   True by default. When true, it adds the total scroll offsets of all parents to the
- *                                   total offset and also adds two properties to the returned object, scrollTop and
- *                                   scrollLeft. If set to false the scroll offsets of parent elements are ignored.
- *                                   If scroll offsets are not needed, set to false to get a performance boost.
- * @param Object returnObject An object to store the return value in, so as not to break the chain. If passed in the
- *                            chain will not be broken and the result will be assigned to this object.
- * @type Object
- * @cat Plugins/Dimensions
- * @author Brandon Aaron (brandon.aaron@gmail.com || http://brandonaaron.net)
- */
-jQuery.fn.offset = function(options, returnObject) {
-	var x = 0, y = 0, elem = this[0], parent = this[0], absparent=false, relparent=false, op, sl = 0, st = 0, options = jQuery.extend({ margin: true, border: true, padding: false, scroll: true }, options || {});
-	do {
-		x += parent.offsetLeft || 0;
-		y += parent.offsetTop  || 0;
-
-		// Mozilla and IE do not add the border
-		if (jQuery.browser.mozilla || jQuery.browser.msie) {
-			// get borders
-			var bt = parseInt(jQuery.css(parent, 'borderTopWidth')) || 0;
-			var bl = parseInt(jQuery.css(parent, 'borderLeftWidth')) || 0;
-
-			// add borders to offset
-			x += bl;
-			y += bt;
-
-			// Mozilla removes the border if the parent has overflow property other than visible
-			if (jQuery.browser.mozilla && parent != elem && jQuery.css(parent, 'overflow') != 'visible') {
-				x += bl;
-				y += bt;
-			}
-			
-			// Mozilla does not include the border on body if an element isn't positioned absolute and is without an absolute parent
-			if (jQuery.css(parent, 'position') == 'absolute') absparent = true;
-			// IE does not include the border on the body if an element is position static and without an absolute or relative parent
-			if (jQuery.css(parent, 'position') == 'relative') relparent = true;
-		}
-
-		if (options.scroll) {
-			// Need to get scroll offsets in-between offsetParents
-			op = parent.offsetParent;
-			do {
-				sl += parent.scrollLeft || 0;
-				st += parent.scrollTop  || 0;
-
-				parent = parent.parentNode;
-
-				// Mozilla removes the border if the parent has overflow property other than visible
-				if (jQuery.browser.mozilla && parent != elem && parent != op && jQuery.css(parent, 'overflow') != 'visible') {
-					x += parseInt(jQuery.css(parent, 'borderLeftWidth')) || 0;
-					y += parseInt(jQuery.css(parent, 'borderTopWidth')) || 0;
-				}
-			} while (op && parent != op);
-		} else
-			parent = parent.offsetParent;
-
-		if (parent && (parent.tagName.toLowerCase() == 'body' || parent.tagName.toLowerCase() == 'html')) {
-			// Safari and IE Standards Mode doesn't add the body margin for elments positioned with static or relative
-			if ((jQuery.browser.safari || (jQuery.browser.msie && jQuery.boxModel)) && jQuery.css(elem, 'position') != 'absolute') {
-				x += parseInt(jQuery.css(parent, 'marginLeft')) || 0;
-				y += parseInt(jQuery.css(parent, 'marginTop'))  || 0;
-			}
-			// Mozilla does not include the border on body if an element isn't positioned absolute and is without an absolute parent
-			// IE does not include the border on the body if an element is positioned static and without an absolute or relative parent
-			if ( (jQuery.browser.mozilla && !absparent) || 
-			     (jQuery.browser.msie && jQuery.css(elem, 'position') == 'static' && (!relparent || !absparent)) ) {
-				x += parseInt(jQuery.css(parent, 'borderLeftWidth')) || 0;
-				y += parseInt(jQuery.css(parent, 'borderTopWidth'))  || 0;
-			}
-			break; // Exit the loop
-		}
-	} while (parent);
-
-	if ( !options.margin) {
-		x -= parseInt(jQuery.css(elem, 'marginLeft')) || 0;
-		y -= parseInt(jQuery.css(elem, 'marginTop'))  || 0;
-	}
-
-	// Safari and Opera do not add the border for the element
-	if ( options.border && (jQuery.browser.safari || jQuery.browser.opera) ) {
-		x += parseInt(jQuery.css(elem, 'borderLeftWidth')) || 0;
-		y += parseInt(jQuery.css(elem, 'borderTopWidth'))  || 0;
-	} else if ( !options.border && !(jQuery.browser.safari || jQuery.browser.opera) ) {
-		x -= parseInt(jQuery.css(elem, 'borderLeftWidth')) || 0;
-		y -= parseInt(jQuery.css(elem, 'borderTopWidth'))  || 0;
-	}
-
-	if ( options.padding ) {
-		x += parseInt(jQuery.css(elem, 'paddingLeft')) || 0;
-		y += parseInt(jQuery.css(elem, 'paddingTop'))  || 0;
-	}
-
-	// Opera thinks offset is scroll offset for display: inline elements
-	if (options.scroll && jQuery.browser.opera && jQuery.css(elem, 'display') == 'inline') {
-		sl -= elem.scrollLeft || 0;
-		st -= elem.scrollTop  || 0;
-	}
-
-	var returnValue = options.scroll ? { top: y - st, left: x - sl, scrollTop:  st, scrollLeft: sl }
-	                                 : { top: y, left: x };
-
-	if (returnObject) { jQuery.extend(returnObject, returnValue); return this; }
-	else              { return returnValue; }
-};
+eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('(7($){m e=$.1q.A,p=$.1q.p;$.1q.P({A:7(){3(!1[0])f();3(1[0]==l)3(($.8.W||$.8.G)&&$(5).p()>n.16)6 n.12-i();s 6 n.12||$.I&&5.Z.1D||5.k.1D;3(1[0]==5)6 1A.1v(5.k.1P,5.k.1a);6 e.1s(1,1K)},p:7(){3(!1[0])f();3(1[0]==l)3(($.8.W||$.8.G)&&$(5).A()>n.12)6 n.16-i();s 6 n.16||$.I&&5.Z.1J||5.k.1J;3(1[0]==5)3($.8.W){m a=n.1p;n.17(22,n.1o);m b=n.1p;n.17(a,n.1o);6 5.k.14+b}s 6 1A.1v(5.k.20,5.k.14);6 p.1s(1,1K)},12:7(){3(!1[0])f();6 1[0]==l||1[0]==5?1.A():1.S(\':M\')?1[0].1a-h(1,\'t\')-h(1,\'1F\'):1.A()+h(1,\'1h\')+h(1,\'1E\')},16:7(){3(!1[0])f();6 1[0]==l||1[0]==5?1.p():1.S(\':M\')?1[0].14-h(1,\'r\')-h(1,\'1C\'):1.p()+h(1,\'1d\')+h(1,\'1B\')},1U:7(){3(!1[0])f();6 1[0]==l||1[0]==5?1.A():1.S(\':M\')?1[0].1a:1.A()+h(1,\'t\')+h(1,\'1F\')+h(1,\'1h\')+h(1,\'1E\')},1R:7(){3(!1[0])f();6 1[0]==l||1[0]==5?1.p():1.S(\':M\')?1[0].14:1.p()+h(1,\'r\')+h(1,\'1C\')+h(1,\'1d\')+h(1,\'1B\')},o:7(a){3(!1[0])f();3(a!=1y)6 1.1u(7(){3(1==l||1==5)l.17(a,$(l).q());s 1.o=a});3(1[0]==l||1[0]==5)6 n.1p||$.I&&5.Z.o||5.k.o;6 1[0].o},q:7(a){3(!1[0])f();3(a!=1y)6 1.1u(7(){3(1==l||1==5)l.17($(l).o(),a);s 1.q=a});3(1[0]==l||1[0]==5)6 n.1o||$.I&&5.Z.q||5.k.q;6 1[0].q},J:7(a){6 1.1t({X:z,F:z,u:1.w()},a)},1t:7(b,c){3(!1[0])f();m x=0,y=0,E=0,D=0,9=1[0],4=1[0],H,15,T=$.v(9,\'J\'),C=$.8.W,L=$.8.21,1I=$.8.13,1n=$.8.G,1m=z,1l=z,b=$.P({X:K,11:z,1k:z,F:K,1H:z,u:5.k},b||{});3(b.1H)6 1.1G(b,c);3(b.u.1j)b.u=b.u[0];3(9.B==\'Q\'){x=9.N;y=9.O;3(C){x+=h(9,\'U\')+(h(9,\'r\')*2);y+=h(9,\'V\')+(h(9,\'t\')*2)}s 3(1n){x+=h(9,\'U\');y+=h(9,\'V\')}s 3(L&&1g.I){x+=h(9,\'r\');y+=h(9,\'t\')}}s{Y{15=$.v(4,\'J\');x+=4.N;y+=4.O;3(C||L){x+=h(4,\'r\');y+=h(4,\'t\');3(C&&15==\'1f\')1m=K;3(L&&15==\'1Z\')1l=K}H=4.w||5.k;3(b.F||C){Y{3(b.F){E+=4.o;D+=4.q}3(1n&&($.v(4,\'1Y\')||\'\').1X(/1W-1V|1S/)){E=E-((4.o==4.N)?4.o:0);D=D-((4.q==4.O)?4.q:0)}3(C&&4!=9&&$.v(4,\'1c\')!=\'M\'){x+=h(4,\'r\');y+=h(4,\'t\')}4=4.1z}R(4!=H)}4=H;3(4==b.u&&!(4.B==\'Q\'||4.B==\'1b\')){3(C&&4!=9&&$.v(4,\'1c\')!=\'M\'){x+=h(4,\'r\');y+=h(4,\'t\')}3(($.8.13||$.8.G)&&$.v(H,\'J\')!=\'1e\'){x-=h(H,\'r\');y-=h(H,\'t\')}1x}3(4.B==\'Q\'||4.B==\'1b\'){3((1I||(L&&$.I))&&T!=\'1f\'&&T!=\'1w\'){x+=h(4,\'U\');y+=h(4,\'V\')}3((C&&!1m&&T!=\'1w\')||(L&&T==\'1e\'&&!1l)){x+=h(4,\'r\');y+=h(4,\'t\')}1x}}R(4)}m a=j(9,b,x,y,E,D);3(c){$.P(c,a);6 1}s{6 a}},1G:7(b,c){3(!1[0])f();m x=0,y=0,E=0,D=0,4=1[0],w,b=$.P({X:K,11:z,1k:z,F:K,u:5.k},b||{});3(b.u.1j)b.u=b.u[0];Y{x+=4.N;y+=4.O;w=4.w||5.k;3(b.F){Y{E+=4.o;D+=4.q;4=4.1z}R(4!=w)}4=w}R(4&&4.B!=\'Q\'&&4.B!=\'1b\'&&4!=b.u);m a=j(1[0],b,x,y,E,D);3(c){$.P(c,a);6 1}s{6 a}},w:7(){3(!1[0])f();m a=1[0].w;R(a&&(a.B!=\'Q\'&&$.v(a,\'J\')==\'1e\'))a=a.w;6 $(a)}});m f=7(){1Q"1O: 1g 1N S 1M";};m h=7(a,b){6 1T($.v(a.1j?a[0]:a,b))||0};m j=7(a,b,x,y,d,c){3(!b.X){x-=h(a,\'U\');y-=h(a,\'V\')}3(b.11&&($.8.13||$.8.G)){x+=h(a,\'r\');y+=h(a,\'t\')}s 3(!b.11&&!($.8.13||$.8.G)){x-=h(a,\'r\');y-=h(a,\'t\')}3(b.1k){x+=h(a,\'1d\');y+=h(a,\'1h\')}3(b.F&&($.8.G&&a.N!=a.o&&a.O!=a.o)){d-=a.o;c-=a.q}6 b.F?{1i:y-c,19:x-d,q:c,o:d}:{1i:y,19:x}};m g=0;m i=7(){3(!g){m a=$(\'<18>\').v({p:10,A:10,1c:\'1L\',J:\'1f\',1i:-1r,19:-1r}).27(\'k\');g=10-a.26(\'<18>\').25(\'18\').v({p:\'10%\',A:24}).p();a.23()}6 g}})(1g);',62,132,'|this||if|parent|document|return|function|browser|elem|||||||||||body|window|var|self|scrollLeft|width|scrollTop|borderLeftWidth|else|borderTopWidth|relativeTo|css|offsetParent|||false|height|tagName|mo|st|sl|scroll|opera|op|boxModel|position|true|ie|visible|offsetLeft|offsetTop|extend|BODY|while|is|elemPos|marginLeft|marginTop|mozilla|margin|do|documentElement|100|border|innerHeight|safari|offsetWidth|parPos|innerWidth|scrollTo|div|left|offsetHeight|HTML|overflow|paddingLeft|static|absolute|jQuery|paddingTop|top|jquery|padding|relparent|absparent|oa|pageYOffset|pageXOffset|fn|1000|apply|offset|each|max|fixed|break|undefined|parentNode|Math|paddingRight|borderRightWidth|clientHeight|paddingBottom|borderBottomWidth|offsetLite|lite|sf|clientWidth|arguments|auto|empty|collection|Dimensions|scrollHeight|throw|outerWidth|inline|parseInt|outerHeight|row|table|match|display|relative|scrollWidth|msie|99999999|remove|200|find|append|appendTo'.split('|'),0,{}))
