@@ -1,5 +1,7 @@
 2.1.5
 - Hungarian translation was added (thanks to Sándor Csaba)
+- jQuery::dimension plugin was updated to 1.0.1
+- tooltips frontend implementation (the jQuery part) was rewritten
 
 2.1.4
 - P4A_Field::setType('color') was added with nice color picker plugin (fabrtastic) from jQuery
